# pdx-claude-code-hackathon-2026

./: .gitignore  CLAUDE.md  GREENLINE_CONTEXT.md  README.md  optimizer_interview.md  requirements.txt  vercel.json
api/: index.py
api/app/: api.py  directions.py  optimizer.py
backend/: .env.example  pyproject.toml
backend/app/: api.py  geo.py  models.py  optimizer.py  seed.py
backend/tests/: test_api.py  test_models.py  test_optimizer.py  test_seed.py
docs/: QA_CHECKLIST.md  testing-plan.md
docs/features/: 01-google-directions.md  02-before-after-toggle.md  03-streaming-reasoning.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ReasoningPanel.tsx  RidePanel.tsx  RouteMap.tsx  VehiclePanel.tsx
frontend/src/lib/: utils.ts
